overflow hidden-x was fixed in mobile

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,7 @@
 .page {
   background-color: #f7f7f7;
-  overflow-x: hidden;
+
+  &__content {
+    overflow-x: hidden;
+  }
 }
